src/parser.ts
// tslint:disable:only-arrow-functions
// tslint:disable:object-literal-shorthand
// tslint:disable:trailing-comma
// tslint:disable:object-literal-sort-keys
// tslint:disable:one-variable-per-declaration
// tslint:disable:max-line-length
// tslint:disable:no-consecutive-blank-lines
// tslint:disable:align


// Generated by PEG.js v. 0.10.0 (ts-pegjs plugin v. 0.1.13 )
//
// https://pegjs.org/   https://github.com/metadevpro/ts-pegjs

import { Context } from "./scope/Context";

import {
    OpBin,
    Type,
} from "./type";

import {
    ExprConstBool,
    ExprConstInt,
    ExprConstFloat,
    ExprDeclVar,
    ExprDeclFunc,
    ExprVar,
    ExprCall,
    ExprCast,
    ExprOpBin,
    ExprBlock,
    ExprIf,
    ExprWhile,
} from "./expr";

export class SyntaxError extends Error {
  public static buildMessage(expected: string, found: string) {
    const DESCRIBE_EXPECTATION_FNS = {
      literal(expectation) {
        return "\"" + literalEscape(expectation.text) + "\"";
      },

      class(expectation) {
        const escapedParts = expectation.parts.map((part) => {
          return Array.isArray(part)
            ? classEscape(part[0]) + "-" + classEscape(part[1])
            : classEscape(part);
        });

        return "[" + (expectation.inverted ? "^" : "") + escapedParts + "]";
      },

      any(): string {
        return "any character";
      },

      end(): string {
        return "end of input";
      },

      other(expectation): string {
        return expectation.description;
      }
    };

    function hex(ch: string): string {
      return ch.charCodeAt(0).toString(16).toUpperCase();
    }

    function literalEscape(s: string): string {
      return s
        .replace(/\\/g, "\\\\")
        .replace(/"/g,  "\\\"")
        .replace(/\0/g, "\\0")
        .replace(/\t/g, "\\t")
        .replace(/\n/g, "\\n")
        .replace(/\r/g, "\\r")
        .replace(/[\x00-\x0F]/g,            (ch) => "\\x0" + hex(ch) )
        .replace(/[\x10-\x1F\x7F-\x9F]/g, (ch) => "\\x"  + hex(ch) );
    }

    function classEscape(s: string): string {
      return s
        .replace(/\\/g, "\\\\")
        .replace(/\]/g, "\\]")
        .replace(/\^/g, "\\^")
        .replace(/-/g,  "\\-")
        .replace(/\0/g, "\\0")
        .replace(/\t/g, "\\t")
        .replace(/\n/g, "\\n")
        .replace(/\r/g, "\\r")
        .replace(/[\x00-\x0F]/g,            (ch) => "\\x0" + hex(ch) )
        .replace(/[\x10-\x1F\x7F-\x9F]/g, (ch) => "\\x"  + hex(ch) );
    }

    function describeExpectation(expectation) {
      return DESCRIBE_EXPECTATION_FNS[expectation.type](expectation);
    }

    function describeExpected(expected1) {
      const descriptions = expected1.map(describeExpectation);
      let i;
      let j;

      descriptions.sort();

      if (descriptions.length > 0) {
        for (i = 1, j = 1; i < descriptions.length; i++) {
          if (descriptions[i - 1] !== descriptions[i]) {
            descriptions[j] = descriptions[i];
            j++;
          }
        }
        descriptions.length = j;
      }

      switch (descriptions.length) {
        case 1:
          return descriptions[0];

        case 2:
          return descriptions[0] + " or " + descriptions[1];

        default:
          return descriptions.slice(0, -1).join(", ")
            + ", or "
            + descriptions[descriptions.length - 1];
      }
    }

    function describeFound(found1) {
      return found1 ? "\"" + literalEscape(found1) + "\"" : "end of input";
    }

    return "Expected " + describeExpected(expected) + " but " + describeFound(found) + " found.";
  }

  public message: string;
  public expected: string;
  public found: string;
  public location: any;
  public name: string;

  constructor(message: string, expected: string, found: string, location) {
    super();
    this.message = message;
    this.expected = expected;
    this.found = found;
    this.location = location;
    this.name = "SyntaxError";

    if (typeof (Error as any).captureStackTrace === "function") {
      (Error as any).captureStackTrace(this, SyntaxError);
    }
  }
}

function peg$parse(input, options) {
  options = options !== undefined ? options : {};

  const peg$FAILED = {};

  const peg$startRuleFunctions = { Program: peg$parseProgram };
  let peg$startRuleFunction = peg$parseProgram;

  const peg$c0 = function(program) {
          program.forEach((expr) => _ctx.pushExpr(expr));
          return _ctx;
      };
  const peg$c1 = function(head, tail) {
          const list = [head];
          tail.forEach(([,expr]) => list.push(expr));
          return list
      };
  const peg$c2 = function() { return []; };
  const peg$c3 = function(expr) { return expr; };
  const peg$c4 = "=";
  const peg$c5 = peg$literalExpectation("=", false);
  const peg$c6 = function(name, expr) { return new ExprDeclVar(_ctx, name, expr); };
  const peg$c7 = function(expr, type) { return new ExprCast(_ctx, expr, type); };
  const peg$c8 = function(head, tail) {
          return lBinOp(head, tail, {
              "and": (lhs, rhs) => new ExprOpBin(_ctx, OpBin.And, lhs, rhs),
              "or":  (lhs, rhs) => new ExprOpBin(_ctx, OpBin.Or,  lhs, rhs),
              "xor": (lhs, rhs) => new ExprOpBin(_ctx, OpBin.Xor, lhs, rhs),
          });
      };
  const peg$c9 = "<";
  const peg$c10 = peg$literalExpectation("<", false);
  const peg$c11 = ">";
  const peg$c12 = peg$literalExpectation(">", false);
  const peg$c13 = "==";
  const peg$c14 = peg$literalExpectation("==", false);
  const peg$c15 = "!=";
  const peg$c16 = peg$literalExpectation("!=", false);
  const peg$c17 = "<=";
  const peg$c18 = peg$literalExpectation("<=", false);
  const peg$c19 = ">=";
  const peg$c20 = peg$literalExpectation(">=", false);
  const peg$c21 = function(head, tail) {
          return lBinOp(head, tail, {
              "<":  (lhs, rhs) => new ExprOpBin(_ctx, OpBin.Lt, lhs, rhs),
              ">":  (lhs, rhs) => new ExprOpBin(_ctx, OpBin.Gt, lhs, rhs),
              "==": (lhs, rhs) => new ExprOpBin(_ctx, OpBin.Eq, lhs, rhs),
              "!=": (lhs, rhs) => new ExprOpBin(_ctx, OpBin.Ne, lhs, rhs),
              "<=": (lhs, rhs) => new ExprOpBin(_ctx, OpBin.Le, lhs, rhs),
              ">=": (lhs, rhs) => new ExprOpBin(_ctx, OpBin.Ge, lhs, rhs),
          });
      };
  const peg$c22 = "+";
  const peg$c23 = peg$literalExpectation("+", false);
  const peg$c24 = "-";
  const peg$c25 = peg$literalExpectation("-", false);
  const peg$c26 = function(head, tail) {
          return lBinOp(head, tail, {
              "+": (lhs, rhs) => new ExprOpBin(_ctx, OpBin.Add, lhs, rhs),
              "-": (lhs, rhs) => new ExprOpBin(_ctx, OpBin.Sub, lhs, rhs),
          });
      };
  const peg$c27 = "*";
  const peg$c28 = peg$literalExpectation("*", false);
  const peg$c29 = "/";
  const peg$c30 = peg$literalExpectation("/", false);
  const peg$c31 = "%";
  const peg$c32 = peg$literalExpectation("%", false);
  const peg$c33 = function(head, tail) {
          return lBinOp(head, tail, {
              "*": (lhs, rhs) => new ExprOpBin(_ctx, OpBin.Mul, lhs, rhs),
              "/": (lhs, rhs) => new ExprOpBin(_ctx, OpBin.Div, lhs, rhs),
              "%": (lhs, rhs) => new ExprOpBin(_ctx, OpBin.Rem, lhs, rhs),
          });
      };
  const peg$c34 = "[";
  const peg$c35 = peg$literalExpectation("[", false);
  const peg$c36 = "]";
  const peg$c37 = peg$literalExpectation("]", false);
  const peg$c38 = function(func, args) { return new ExprCall(_ctx, func, args); };
  const peg$c39 = ",";
  const peg$c40 = peg$literalExpectation(",", false);
  const peg$c41 = function(head, tail) { return [head, ...tail.map((val) => val[3])]; };
  const peg$c42 = "(";
  const peg$c43 = peg$literalExpectation("(", false);
  const peg$c44 = ")";
  const peg$c45 = peg$literalExpectation(")", false);
  const peg$c46 = function(value) { return new ExprConstBool(_ctx, value); };
  const peg$c47 = function(value) { return new ExprConstInt(_ctx, value); };
  const peg$c48 = function(value) { return new ExprConstFloat(_ctx, value); };
  const peg$c49 = function(name) { return new ExprVar(_ctx, name); };
  const peg$c50 = function(_cond, _then, _else) { return new ExprIf(_ctx, _cond, _then, _else ? _else[3] : null); };
  const peg$c51 = function(_cond, _loop, _else) { return new ExprWhile(_ctx, _cond, _loop, _else ? _else[3] : null); };
  const peg$c52 = "{";
  const peg$c53 = peg$literalExpectation("{", false);
  const peg$c54 = "}";
  const peg$c55 = peg$literalExpectation("}", false);
  const peg$c56 = function(exprs) { return new ExprBlock(_ctx, exprs); };
  const peg$c57 = ":";
  const peg$c58 = peg$literalExpectation(":", false);
  const peg$c59 = function(name, args, retType, body) {
          name = name ? name[1] : "";
          retType = retType ? retType[2] : _ctx.getTypeVoid();
          return new ExprDeclFunc(_ctx, name, _ctx.getTypeFunc(retType, args.map((arg) => arg.getType())), body);
      };
  const peg$c60 = function(name, type) { return new ExprDeclVar(_ctx, name, type); };
  const peg$c61 = peg$otherExpectation("identifier");
  const peg$c62 = /^[_a-z]/i;
  const peg$c63 = peg$classExpectation(["_", ["a", "z"]], false, true);
  const peg$c64 = /^[_a-z0-9]/i;
  const peg$c65 = peg$classExpectation(["_", ["a", "z"], ["0", "9"]], false, true);
  const peg$c66 = function() { return text(); };
  const peg$c67 = peg$otherExpectation("integer");
  const peg$c68 = /^[0-9]/;
  const peg$c69 = peg$classExpectation([["0", "9"]], false, false);
  const peg$c70 = ".";
  const peg$c71 = peg$literalExpectation(".", false);
  const peg$c72 = function() { return parseInt(text(), 10); };
  const peg$c73 = peg$otherExpectation("float");
  const peg$c74 = function() { return parseFloat(text()); };
  const peg$c75 = function() { return true; };
  const peg$c76 = function() { return false; };
  const peg$c77 = function(type) { return _ctx.getTypeByName(type); };
  const peg$c78 = "if";
  const peg$c79 = peg$literalExpectation("if", false);
  const peg$c80 = "else";
  const peg$c81 = peg$literalExpectation("else", false);
  const peg$c82 = "while";
  const peg$c83 = peg$literalExpectation("while", false);
  const peg$c84 = "break";
  const peg$c85 = peg$literalExpectation("break", false);
  const peg$c86 = "continue";
  const peg$c87 = peg$literalExpectation("continue", false);
  const peg$c88 = "function";
  const peg$c89 = peg$literalExpectation("function", false);
  const peg$c90 = "return";
  const peg$c91 = peg$literalExpectation("return", false);
  const peg$c92 = "var";
  const peg$c93 = peg$literalExpectation("var", false);
  const peg$c94 = "const";
  const peg$c95 = peg$literalExpectation("const", false);
  const peg$c96 = "as";
  const peg$c97 = peg$literalExpectation("as", false);
  const peg$c98 = "true";
  const peg$c99 = peg$literalExpectation("true", false);
  const peg$c100 = "false";
  const peg$c101 = peg$literalExpectation("false", false);
  const peg$c102 = "not";
  const peg$c103 = peg$literalExpectation("not", false);
  const peg$c104 = "and";
  const peg$c105 = peg$literalExpectation("and", false);
  const peg$c106 = "or";
  const peg$c107 = peg$literalExpectation("or", false);
  const peg$c108 = "xor";
  const peg$c109 = peg$literalExpectation("xor", false);
  const peg$c110 = peg$otherExpectation("whitespace");
  const peg$c111 = /^[ \t\n\r]/;
  const peg$c112 = peg$classExpectation([" ", "\t", "\n", "\r"], false, false);

  let peg$currPos = 0;
  let peg$savedPos = 0;
  const peg$posDetailsCache = [{ line: 1, column: 1 }];
  let peg$maxFailPos = 0;
  let peg$maxFailExpected: any[] = [];
  let peg$silentFails = 0;

  let peg$result;

  if ("startRule" in options) {
    if (!(options.startRule in peg$startRuleFunctions)) {
      throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
    }

    peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
  }

  function text(): string {
    return input.substring(peg$savedPos, peg$currPos);
  }

  function location() {
    return peg$computeLocation(peg$savedPos, peg$currPos);
  }

  function expected(description, location1?) {
    location1 = location1 !== undefined
      ? location1
      : peg$computeLocation(peg$savedPos, peg$currPos);

    throw peg$buildStructuredError(
      [peg$otherExpectation(description)],
      input.substring(peg$savedPos, peg$currPos),
      location1
    );
  }

  function error(message: string, location1?) {
    location1 = location1 !== undefined
      ? location1
      : peg$computeLocation(peg$savedPos, peg$currPos);

    throw peg$buildSimpleError(message, location1);
  }

  function peg$literalExpectation(text1: string, ignoreCase: boolean) {
    return { type: "literal", text: text1, ignoreCase: ignoreCase };
  }

  function peg$classExpectation(parts, inverted, ignoreCase: boolean) {
    return { type: "class", parts: parts, inverted: inverted, ignoreCase: ignoreCase };
  }

  function peg$anyExpectation() {
    return { type: "any" };
  }

  function peg$endExpectation() {
    return { type: "end" };
  }

  function peg$otherExpectation(description) {
    return { type: "other", description: description };
  }

  function peg$computePosDetails(pos: number) {
    let details = peg$posDetailsCache[pos];
    let p;

    if (details) {
      return details;
    } else {
      p = pos - 1;
      while (!peg$posDetailsCache[p]) {
        p--;
      }

      details = peg$posDetailsCache[p];
      details = {
        line: details.line,
        column: details.column
      };

      while (p < pos) {
        if (input.charCodeAt(p) === 10) {
          details.line++;
          details.column = 1;
        } else {
          details.column++;
        }

        p++;
      }

      peg$posDetailsCache[pos] = details;

      return details;
    }
  }

  function peg$computeLocation(startPos: number, endPos: number) {
    const startPosDetails = peg$computePosDetails(startPos);
    const endPosDetails = peg$computePosDetails(endPos);

    return {
      start: {
        offset: startPos,
        line: startPosDetails.line,
        column: startPosDetails.column
      },
      end: {
        offset: endPos,
        line: endPosDetails.line,
        column: endPosDetails.column
      }
    };
  }

  function peg$fail(expected1) {
    if (peg$currPos < peg$maxFailPos) { return; }

    if (peg$currPos > peg$maxFailPos) {
      peg$maxFailPos = peg$currPos;
      peg$maxFailExpected = [];
    }

    peg$maxFailExpected.push(expected1);
  }

  function peg$buildSimpleError(message, location1) {
    return new SyntaxError(message, "", "", location1);
  }

  function peg$buildStructuredError(expected1, found, location1) {
    return new SyntaxError(
      SyntaxError.buildMessage(expected1, found),
      expected1,
      found,
      location1
    );
  }

  function peg$parseProgram() {
    let s0, s1;

    s0 = peg$currPos;
    s1 = peg$parseExprList();
    if (s1 !== peg$FAILED) {
      peg$savedPos = s0;
      s1 = peg$c0(s1);
    }
    s0 = s1;

    return s0;
  }

  function peg$parseExprList() {
    let s0, s1, s2, s3, s4, s5, s6;

    s0 = peg$currPos;
    s1 = peg$parse_();
    if (s1 !== peg$FAILED) {
      s2 = peg$parseExpr();
      if (s2 !== peg$FAILED) {
        s3 = [];
        s4 = peg$currPos;
        s5 = peg$parse_();
        if (s5 !== peg$FAILED) {
          s6 = peg$parseExpr();
          if (s6 !== peg$FAILED) {
            s5 = [s5, s6];
            s4 = s5;
          } else {
            peg$currPos = s4;
            s4 = peg$FAILED;
          }
        } else {
          peg$currPos = s4;
          s4 = peg$FAILED;
        }
        while (s4 !== peg$FAILED) {
          s3.push(s4);
          s4 = peg$currPos;
          s5 = peg$parse_();
          if (s5 !== peg$FAILED) {
            s6 = peg$parseExpr();
            if (s6 !== peg$FAILED) {
              s5 = [s5, s6];
              s4 = s5;
            } else {
              peg$currPos = s4;
              s4 = peg$FAILED;
            }
          } else {
            peg$currPos = s4;
            s4 = peg$FAILED;
          }
        }
        if (s3 !== peg$FAILED) {
          s4 = peg$parse_();
          if (s4 !== peg$FAILED) {
            peg$savedPos = s0;
            s1 = peg$c1(s2, s3);
            s0 = s1;
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }
    if (s0 === peg$FAILED) {
      s0 = peg$currPos;
      s1 = peg$parse_();
      if (s1 !== peg$FAILED) {
        peg$savedPos = s0;
        s1 = peg$c2();
      }
      s0 = s1;
    }

    return s0;
  }

  function peg$parseExpr() {
    let s0, s1, s2, s3, s4, s5, s6, s7;

    s0 = peg$currPos;
    s1 = peg$parseExprCast();
    if (s1 !== peg$FAILED) {
      peg$savedPos = s0;
      s1 = peg$c3(s1);
    }
    s0 = s1;
    if (s0 === peg$FAILED) {
      s0 = peg$currPos;
      s1 = peg$parseKeywordVar();
      if (s1 !== peg$FAILED) {
        s2 = peg$parse_();
        if (s2 !== peg$FAILED) {
          s3 = peg$parseId();
          if (s3 !== peg$FAILED) {
            s4 = peg$parse_();
            if (s4 !== peg$FAILED) {
              if (input.charCodeAt(peg$currPos) === 61) {
                s5 = peg$c4;
                peg$currPos++;
              } else {
                s5 = peg$FAILED;
                if (peg$silentFails === 0) { peg$fail(peg$c5); }
              }
              if (s5 !== peg$FAILED) {
                s6 = peg$parse_();
                if (s6 !== peg$FAILED) {
                  s7 = peg$parseExprCast();
                  if (s7 !== peg$FAILED) {
                    peg$savedPos = s0;
                    s1 = peg$c6(s3, s7);
                    s0 = s1;
                  } else {
                    peg$currPos = s0;
                    s0 = peg$FAILED;
                  }
                } else {
                  peg$currPos = s0;
                  s0 = peg$FAILED;
                }
              } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    }

    return s0;
  }

  function peg$parseExprCast() {
    let s0, s1, s2, s3, s4, s5;

    s0 = peg$currPos;
    s1 = peg$parseExprLogic();
    if (s1 !== peg$FAILED) {
      s2 = peg$parse_();
      if (s2 !== peg$FAILED) {
        s3 = peg$parseKeywordAs();
        if (s3 !== peg$FAILED) {
          s4 = peg$parse_();
          if (s4 !== peg$FAILED) {
            s5 = peg$parseType();
            if (s5 !== peg$FAILED) {
              peg$savedPos = s0;
              s1 = peg$c7(s1, s5);
              s0 = s1;
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }
    if (s0 === peg$FAILED) {
      s0 = peg$parseExprLogic();
    }

    return s0;
  }

  function peg$parseExprLogic() {
    let s0, s1, s2, s3, s4, s5, s6, s7;

    s0 = peg$currPos;
    s1 = peg$parseExprCmp();
    if (s1 !== peg$FAILED) {
      s2 = [];
      s3 = peg$currPos;
      s4 = peg$parse_();
      if (s4 !== peg$FAILED) {
        s5 = peg$parseKeywordAnd();
        if (s5 === peg$FAILED) {
          s5 = peg$parseKeywordOr();
          if (s5 === peg$FAILED) {
            s5 = peg$parseKeywordXor();
          }
        }
        if (s5 !== peg$FAILED) {
          s6 = peg$parse_();
          if (s6 !== peg$FAILED) {
            s7 = peg$parseExprCmp();
            if (s7 !== peg$FAILED) {
              s4 = [s4, s5, s6, s7];
              s3 = s4;
            } else {
              peg$currPos = s3;
              s3 = peg$FAILED;
            }
          } else {
            peg$currPos = s3;
            s3 = peg$FAILED;
          }
        } else {
          peg$currPos = s3;
          s3 = peg$FAILED;
        }
      } else {
        peg$currPos = s3;
        s3 = peg$FAILED;
      }
      if (s3 !== peg$FAILED) {
        while (s3 !== peg$FAILED) {
          s2.push(s3);
          s3 = peg$currPos;
          s4 = peg$parse_();
          if (s4 !== peg$FAILED) {
            s5 = peg$parseKeywordAnd();
            if (s5 === peg$FAILED) {
              s5 = peg$parseKeywordOr();
              if (s5 === peg$FAILED) {
                s5 = peg$parseKeywordXor();
              }
            }
            if (s5 !== peg$FAILED) {
              s6 = peg$parse_();
              if (s6 !== peg$FAILED) {
                s7 = peg$parseExprCmp();
                if (s7 !== peg$FAILED) {
                  s4 = [s4, s5, s6, s7];
                  s3 = s4;
                } else {
                  peg$currPos = s3;
                  s3 = peg$FAILED;
                }
              } else {
                peg$currPos = s3;
                s3 = peg$FAILED;
              }
            } else {
              peg$currPos = s3;
              s3 = peg$FAILED;
            }
          } else {
            peg$currPos = s3;
            s3 = peg$FAILED;
          }
        }
      } else {
        s2 = peg$FAILED;
      }
      if (s2 !== peg$FAILED) {
        peg$savedPos = s0;
        s1 = peg$c8(s1, s2);
        s0 = s1;
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }
    if (s0 === peg$FAILED) {
      s0 = peg$parseExprCmp();
    }

    return s0;
  }

  function peg$parseExprCmp() {
    let s0, s1, s2, s3, s4, s5, s6, s7;
